# douyin-live-mcp

./: README.md  pyproject.toml
douyin_live_mcp/: __init__.py
